--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,7 +14,7 @@
               por ser parte de nuestra historia.
             </p>
             <h1 class="nombre-invitado" *ngIf="invitado">
-              {{ invitado.nombre }}
+              {{ nombreInvitado(invitado) }}
             </h1>
             <p *ngIf="invitado">
               ¡Esperamos que nos puedan
