--- a/src/app/lista-invitados/lista-invitados.component.css
+++ b/src/app/lista-invitados/lista-invitados.component.css
@@ -15,3 +15,15 @@
   margin-left: 5px;
   margin-right: 5px;
 }
+.mat-footer-row,
+.mat-header-row,
+.mat-row {
+    display: inline-flex;
+    min-width: 100%;
+}
+
+
+:host ::ng-deep .mat-mdc-standard-chip.mdc-evolution-chip--disabled {
+  opacity: 1 !important;
+}
+
