--- a/src/app/lista-invitados/lista-invitados.component.html
+++ b/src/app/lista-invitados/lista-invitados.component.html
@@ -20,6 +20,9 @@
   </div>
   <div class="row">
     <button mat-raised-button (click)="exportExcel()">Export To Excel</button>
+    <!-- <button mat-raised-button (click)="exportExcelFromFile()">
+      Export To Excel From File
+    </button> -->
     <ng-container *ngFor="let item of columns">
       <button
         mat-raised-button
@@ -29,16 +32,50 @@
         {{ item.name }}
       </button>
     </ng-container>
-    <!-- <button mat-raised-button (click)="addColumn()">Add column</button>
-    <button mat-raised-button (click)="removeColumn()">Remove column</button>
-    <button mat-raised-button (click)="shuffle()">Shuffle</button> -->
+  </div>
+  <div class="row">
+    <mat-chip-option
+      color="warn"
+      (click)="filterTable('novistos')"
+      [selected]="isFiltered[0] === 'novistos'"
+    >
+      No Vistos {{ getNoVistos }}
+    </mat-chip-option>
+    <mat-chip-option
+      color="accent"
+      (click)="filterTable('vistos')"
+      [selected]="isFiltered[0] === 'vistos'"
+    >
+      Vistos {{ getVistos }}
+    </mat-chip-option>
+    <mat-chip-option
+      color="primary"
+      (click)="filterTable('confirmados')"
+      [selected]="isFiltered[0] === 'confirmados'"
+    >
+      confirmados {{ getConfirmados }}
+    </mat-chip-option>
+    <mat-chip-option
+      color="primary"
+      (click)="filterTable('asistiran')"
+      [selected]="isFiltered[0] === 'asistiran'"
+    >
+      Asistiran {{ getAsistentes }}
+    </mat-chip-option>
+    <mat-chip-option
+      color="warn"
+      (click)="filterTable('noAsistiran')"
+      [selected]="isFiltered[0] === 'noAsistiran'"
+    >
+      No Asistiran {{ getNoAsistentes }}
+    </mat-chip-option>
   </div>
   <div>
     <input
       type="text"
       style="padding: 8px; margin: 15px auto; width: 30%"
       placeholder="Type to filter the name column..."
-      (keyup)="updateFilter($event)"
+      (keyup)="search($event)"
     />
     <ngx-datatable
       class="material"
@@ -152,101 +189,15 @@
             let-rowIndex="rowIndex"
             ngx-datatable-cell-template
           >
-            <mat-chip-listbox>
-              <mat-chip-option
-                color="accent"
-                disabled=""
-                [selected]="row.confirmacionAsistencia"
-                >{{
-                  row.confirmacionAsistencia ? "confirmado" : "sin confirmar"
-                }}</mat-chip-option
-              >
-            </mat-chip-listbox>
+            <mat-chip-option
+              [color]="getEstatusInvitacionConfirmadoColor(row)"
+              disabled
+              [selected]="row.estatusDeInvitacion === 'confirmado'"
+              >{{ getEstatusConfirmado(row) }}</mat-chip-option
+            >
           </ng-template>
         </ngx-datatable-column>
       </ng-container>
     </ngx-datatable>
   </div>
-  <!-- <div class="row">
-    <table
-      mat-table
-      [dataSource]="invitadosList"
-      class="mat-elevation-z8"
-      multiTemplateDataRows
-    >
-      <ng-container
-        [matColumnDef]="column"
-        *ngFor="let column of displayedColumns"
-      >
-        <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
-        <td mat-cell *matCellDef="let element">
-          <ng-container
-            *ngIf="column === 'confirmacionAsistencia'; else newDeb"
-          >
-            <mat-chip-listbox>
-              <mat-chip-option
-                color="accent"
-                disabled=""
-                [selected]="element.confirmacionAsistencia"
-                >{{
-                  element.confirmacionAsistencia
-                    ? "confirmado"
-                    : "sin confirmar"
-                }}</mat-chip-option
-              >
-            </mat-chip-listbox>
-          </ng-container>
-          <ng-template #newDeb>
-            {{ element[column] }}
-          </ng-template>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="invitadosExtraLista">
-        <td
-          mat-cell
-          *matCellDef="let element"
-          [attr.colspan]="columnsToDisplay.length"
-        >
-          <div
-            class="row"
-            *ngFor="let invExtra of element.invitadosExtraLista; let i = index"
-          >
-            <div class="column example-element-position">
-              Acompañante {{ i + 1 }}
-            </div>
-            <div class="column example-element-position">
-              {{ invExtra.nombre }}
-            </div>
-            <div class="column example-element-symbol">
-              <mat-chip-listbox>
-                <mat-chip-option
-                  color="accent"
-                  disabled=""
-                  [selected]="invExtra.confirmacionAsistencia"
-                  >{{
-                    invExtra.confirmacionAsistencia
-                      ? "confirmado"
-                      : "sin confirmar"
-                  }}</mat-chip-option
-                >
-              </mat-chip-listbox>
-            </div>
-            <div class="column example-element-symbol">
-              {{ invExtra.alergia }}
-            </div>
-          </div>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-      <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
-      <tr
-        mat-row
-        *matRowDef="let row; columns: ['invitadosExtraLista']"
-        [hidden]="!hideExtraRow(row)"
-        class="example-detail-row"
-      ></tr>
-    </table>
-  </div> -->
 </div>
