--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
               {{ nombreInvitado(invitado) }}
             </h1>
             <p *ngIf="invitado">
-              ¡Esperamos que nos puedan
+              ¡Esperamos que nos
               {{ invitado.numeroDeInvitadosExtra === 0 ? "puedas" : "puedan" }}
               acompañar en este día tan especial!
             </p>
