--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -121,6 +121,21 @@
           </div>
         </ng-container>
       </div>
+      <div class="row">
+        <div class="column mesa-regalo-card sobre">
+          <div class="regalo-sobre">
+            <img
+              class="regalo-sobre-icon"
+              src="../../assets/images/mesa/envelope.png"
+              alt="sobre de regalo logo"
+            />
+            <small class="mesa-regalo-text-sobre"
+              >Sobre o transferencia el día del evento en nuestra
+              recepción</small
+            >
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
