--- a/src/app/lista-invitados/lista-invitados.component.html
+++ b/src/app/lista-invitados/lista-invitados.component.html
@@ -89,8 +89,8 @@
       </div>
     </div>
     <div class="column datos-inv">
-      <p (click)="filterTable('Violeta')" class="clickable">Violeta</p>
-      <div class="row no-pad clickable" (click)="filterTable('Carlos & Vi')">
+      <p class="clickable">Violeta</p>
+      <div class="row no-pad clickable" (click)="filterTable('Violeta')" >
         <div class="column right">{{ getInvitadosByPerson("Violeta") }}</div>
       </div>
       <div
@@ -150,7 +150,7 @@
     </div>
     <div class="column datos-inv">
       <p>Familia Violeta</p>
-      <div class="row no-pad clickable" (click)="filterTable('FV ')">
+      <div class="row no-pad clickable" (click)="filterTable('FV')">
         <div class="column right">{{ getInvitadosByPerson("FV") }}</div>
       </div>
       <div class="row no-pad clickable" (click)="filterTable('FV Pendientes')">
